implementations/rust/ockam/ockam/tests/node_test/fail_with_owned_context.stderr
error: The context argument must be passed as reference
 --> $DIR/fail_with_owned_context.rs:2:7
  |
2 | async fn my_test(ctx: Context) -> ockam_core::Result<()> {
  |       ^^
